--- a/src/template.html
+++ b/src/template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Webpack</title>
+    <title>React starter pack</title>
 </head>
 <body>
     <div id="root"></div>
